--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -131,7 +131,7 @@
     </string-array>
 
     <string-array name="parking_record">
-        <item>Recording time</item>
+        <item>録画時間</item>
     </string-array>
 
     <string-array name="device_install">
