修改进入设置向导安返回键能退出设置

--- a/app/src/main/res/layout/activity_system_installation_satellite.xml
+++ b/app/src/main/res/layout/activity_system_installation_satellite.xml
@@ -14,12 +14,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView"
+        android:background="@drawable/bg_gps_all"
         android:layout_margin="@dimen/view_margin_top"
         >
     </com.askey.dvr.cdr7010.setting.view.HorizontalListView>
-
-
 
     <include
         layout="@layout/right_button_layout"
