--- a/app/src/main/res/layout/activity_sdcard_information.xml
+++ b/app/src/main/res/layout/activity_sdcard_information.xml
@@ -25,19 +25,21 @@
         android:id="@+id/sdcard_picture_dir"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/sdcard_info_layout"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/sdcard_info_title_view"
-        android:layout_marginTop="@dimen/view_margin_top"
-        android:layout_marginStart="@dimen/title_margin_top"
+        android:layout_marginStart="27dp"
         android:text="@string/sdcard_info_title"
         android:textColor="@color/white" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        android:id="@+id/sdcard_info_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:layout_gravity="center"
+        android:layout_marginTop="@dimen/title_margin_top"
+        android:layout_marginBottom="@dimen/title_margin_top"
+        android:background="@drawable/bg_sd_table_all"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -52,6 +54,9 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/bg_sd_table1"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -73,6 +78,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dip"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
+                android:background="@drawable/bg_sd_table2"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -105,6 +113,9 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/bg_sd_table1"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -121,20 +132,28 @@
                     android:textColor="@color/white" />
             </LinearLayout>
 
+<!--            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+            </LinearLayout>-->
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/sdcard_parking_dir"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginLeft="@dimen/title_margin_top"
-            android:layout_marginRight="@dimen/title_margin_top"
-            android:gravity="right"
-            android:text="@string/sdcard_info_context_explane"
-            android:textColor="@color/white" />
+
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/sdcard_parking_dir"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/sdcard_info_layout"
+        android:layout_gravity="right"
+        android:layout_marginRight="@dimen/title_margin_top"
+        android:gravity="right"
+        android:text="@string/sdcard_info_context_explane"
+        android:textColor="@color/white" />
     <include
         layout="@layout/right_button_layout"
         android:layout_width="wrap_content"
