--- a/app/src/main/res/layout/activity_lcd_brightness.xml
+++ b/app/src/main/res/layout/activity_lcd_brightness.xml
@@ -2,97 +2,115 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@drawable/bg_menu_main">
 
-    <ImageView
-        android:id="@+id/iv_brightness1"
-        android:layout_width="@dimen/brightness_width"
-        android:layout_height="20dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="@dimen/brightness_margin"
-        android:src="@drawable/unchecked1" />
+    <include layout="@layout/title_layout" />
 
-    <ImageView
-        android:id="@+id/iv_brightness2"
-        android:layout_width="@dimen/brightness_width"
-        android:layout_height="40dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="@dimen/brightness_margin"
-        android:layout_toRightOf="@id/iv_brightness1"
-        android:src="@drawable/unchecked2" />
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:background="@drawable/bg_brightness_bottom">
 
-    <ImageView
-        android:id="@+id/iv_brightness3"
-        android:layout_width="@dimen/brightness_width"
-        android:layout_height="60dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="@dimen/brightness_margin"
-        android:layout_toRightOf="@id/iv_brightness2"
-        android:src="@drawable/unchecked3" />
+        <ImageView
+            android:id="@+id/iv_brightness0"
+            android:layout_width="@dimen/brightness_width"
+            android:layout_height="@dimen/brightness_height"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/brightness_margin"
+            android:src="@drawable/bg_brightness_none" />
+        <ImageView
+            android:id="@+id/iv_brightness1"
+            android:layout_width="@dimen/brightness_width"
+            android:layout_height="@dimen/brightness_height"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/brightness_margin"
+            android:layout_toRightOf="@id/iv_brightness0"
+            android:src="@drawable/bg_brightness_none" />
 
-    <ImageView
-        android:id="@+id/iv_brightness4"
-        android:layout_width="@dimen/brightness_width"
-        android:layout_height="80dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="@dimen/brightness_margin"
-        android:layout_toRightOf="@id/iv_brightness3"
-        android:src="@drawable/unchecked4" />
+        <ImageView
+            android:id="@+id/iv_brightness2"
+            android:layout_width="@dimen/brightness_width"
+            android:layout_height="@dimen/brightness_height"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/brightness_margin"
+            android:layout_toRightOf="@id/iv_brightness1"
+            android:src="@drawable/bg_brightness_none" />
 
-    <ImageView
-        android:id="@+id/iv_brightness5"
-        android:layout_width="@dimen/brightness_width"
-        android:layout_height="100dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="@dimen/brightness_margin"
-        android:layout_toRightOf="@id/iv_brightness4"
-        android:src="@drawable/unchecked5" />
+        <ImageView
+            android:id="@+id/iv_brightness3"
+            android:layout_width="@dimen/brightness_width"
+            android:layout_height="@dimen/brightness_height"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/brightness_margin"
+            android:layout_toRightOf="@id/iv_brightness2"
+            android:src="@drawable/bg_brightness_none" />
 
-    <ImageView
-        android:id="@+id/iv_brightness6"
-        android:layout_width="@dimen/brightness_width"
-        android:layout_height="120dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="@dimen/brightness_margin"
-        android:layout_toRightOf="@id/iv_brightness5"
-        android:src="@drawable/unchecked6" />
+        <ImageView
+            android:id="@+id/iv_brightness4"
+            android:layout_width="@dimen/brightness_width"
+            android:layout_height="@dimen/brightness_height"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/brightness_margin"
+            android:layout_toRightOf="@id/iv_brightness3"
+            android:src="@drawable/bg_brightness_none" />
 
-    <ImageView
-        android:id="@+id/iv_brightness7"
-        android:layout_width="@dimen/brightness_width"
-        android:layout_height="140dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="@dimen/brightness_margin"
-        android:layout_toRightOf="@id/iv_brightness6"
-        android:src="@drawable/unchecked7" />
+        <ImageView
+            android:id="@+id/iv_brightness5"
+            android:layout_width="@dimen/brightness_width"
+            android:layout_height="@dimen/brightness_height"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/brightness_margin"
+            android:layout_toRightOf="@id/iv_brightness4"
+            android:src="@drawable/bg_brightness_none" />
 
-    <ImageView
-        android:id="@+id/iv_brightness8"
-        android:layout_width="@dimen/brightness_width"
-        android:layout_height="160dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="@dimen/brightness_margin"
-        android:layout_toRightOf="@id/iv_brightness7"
-        android:src="@drawable/unchecked8" />
+        <ImageView
+            android:id="@+id/iv_brightness6"
+            android:layout_width="@dimen/brightness_width"
+            android:layout_height="@dimen/brightness_height"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/brightness_margin"
+            android:layout_toRightOf="@id/iv_brightness5"
+            android:src="@drawable/bg_brightness_none" />
 
-    <ImageView
-        android:id="@+id/iv_brightness9"
-        android:layout_width="@dimen/brightness_width"
-        android:layout_height="180dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="@dimen/brightness_margin"
-        android:layout_toRightOf="@id/iv_brightness8"
-        android:src="@drawable/unchecked9" />
+        <ImageView
+            android:id="@+id/iv_brightness7"
+            android:layout_width="@dimen/brightness_width"
+            android:layout_height="@dimen/brightness_height"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/brightness_margin"
+            android:layout_toRightOf="@id/iv_brightness6"
+            android:src="@drawable/bg_brightness_none" />
 
-    <ImageView
-        android:id="@+id/iv_brightness10"
-        android:layout_width="@dimen/brightness_width"
-        android:layout_height="200dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="@dimen/brightness_margin"
-        android:layout_toRightOf="@id/iv_brightness9"
-        android:src="@drawable/unchecked10" />
+        <ImageView
+            android:id="@+id/iv_brightness8"
+            android:layout_width="@dimen/brightness_width"
+            android:layout_height="@dimen/brightness_height"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/brightness_margin"
+            android:layout_toRightOf="@id/iv_brightness7"
+            android:src="@drawable/bg_brightness_none" />
 
+        <ImageView
+            android:id="@+id/iv_brightness9"
+            android:layout_width="@dimen/brightness_width"
+            android:layout_height="@dimen/brightness_height"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/brightness_margin"
+            android:layout_toRightOf="@id/iv_brightness8"
+            android:src="@drawable/bg_brightness_none" />
+
+        <ImageView
+            android:id="@+id/iv_brightness10"
+            android:layout_width="@dimen/brightness_width"
+            android:layout_height="@dimen/brightness_height"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/brightness_margin"
+            android:layout_toRightOf="@id/iv_brightness9"
+            android:layout_marginRight="@dimen/brightness_margin"
+            android:src="@drawable/bg_brightness_none" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
