--- a/app/src/main/res/layout/activity_sdcard_information.xml
+++ b/app/src/main/res/layout/activity_sdcard_information.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/sdcard_info_layout"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="27dp"
+        android:layout_marginStart="@dimen/title_margin_top"
         android:text="@string/sdcard_info_title"
         android:textColor="@color/white" />
 
