--- a/app/src/main/res/layout/activity_system_installation_satellite.xml
+++ b/app/src/main/res/layout/activity_system_installation_satellite.xml
@@ -15,7 +15,10 @@
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:background="@drawable/bg_gps_all"
-        android:layout_margin="@dimen/title_margin_top"
+        android:layout_marginTop="@dimen/title_margin_top"
+        android:layout_marginBottom="@dimen/title_margin_top"
+        android:layout_marginRight="@dimen/title_margin_top"
+        android:layout_marginLeft="@dimen/view_margin_top"
         >
     </com.askey.dvr.cdr7010.setting.view.HorizontalListView>
 
