--- a/app/src/main/res/layout/horizontal_list_item.xml
+++ b/app/src/main/res/layout/horizontal_list_item.xml
@@ -2,39 +2,69 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="@dimen/gps_status_padding_top"
-    android:paddingBottom="@dimen/gps_status_padding_top"
-    android:paddingLeft="@dimen/gps_status_padding_left"
-    android:paddingRight="@dimen/gps_status_padding_left"
     android:layout_weight="0"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/gps_signal_strength"
-        android:layout_width="match_parent"
-        android:layout_height="80dip"
-        android:layout_weight="0.1"
-        android:layout_marginTop="@dimen/view_margin_top"
-        android:textColor="@color/white"
-        android:background="@color/color_ffff33"
-        android:text="" />
-
-    <TextView
-        android:id="@+id/gps_satellite_number"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="0.3"
-        android:layout_marginTop="@dimen/view_margin_top"
-        android:textColor="@color/white"
-        android:text="TextView" />
+        android:layout_weight="0.5"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/gps_signal_strength_value"
+        <TextView
+            android:id="@+id/gps_signal_strength"
+            android:layout_width="wrap_content"
+            android:layout_height="80dip"
+            android:layout_marginTop="@dimen/view_margin_top"
+            android:background="@color/color_ffff33"
+            android:text=""
+            android:textColor="@color/white" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dip"
+            android:background="@color/white" />
+
+        <TextView
+            android:id="@+id/gps_satellite_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/view_margin_top"
+            android:padding="@dimen/view_gps_detail_padding"
+            android:textColor="@color/white" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dip"
+            android:background="@color/white" />
+
+        <TextView
+            android:id="@+id/gps_signal_strength_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_marginTop="@dimen/view_margin_top"
+            android:padding="@dimen/view_gps_detail_padding"
+            android:textColor="@color/white" />
+    </LinearLayout>
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="0.3"
-        android:layout_marginTop="@dimen/view_margin_top"
-        android:textColor="@color/white"
-        android:text="TextView" />
+        android:layout_weight="0.5"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="80dip"
+            android:layout_marginTop="@dimen/view_margin_top"
+        >
+        </TextView>
+        <TextView
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="@color/white">
+        </TextView>
+    </LinearLayout>
+
 
 </LinearLayout>
