PUCDR-71[Settings] LCD Brightness setting增加右边小图标

--- a/app/src/main/res/layout/activity_lcd_brightness.xml
+++ b/app/src/main/res/layout/activity_lcd_brightness.xml
@@ -20,6 +20,7 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/brightness_margin"
             android:src="@drawable/bg_brightness_none" />
+
         <ImageView
             android:id="@+id/iv_brightness1"
             android:layout_width="@dimen/brightness_width"
@@ -107,10 +108,22 @@
             android:layout_height="@dimen/brightness_height"
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/brightness_margin"
-            android:layout_toRightOf="@id/iv_brightness9"
             android:layout_marginRight="@dimen/brightness_margin"
+            android:layout_toRightOf="@id/iv_brightness9"
             android:src="@drawable/bg_brightness_none" />
 
     </RelativeLayout>
+
+    <include
+        layout="@layout/right_button_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentEnd="true" />
+
+    <include
+        layout="@layout/bottom_button_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true" />
 
 </RelativeLayout>
