--- a/app/src/main/res/layout/horizontal_list_item.xml
+++ b/app/src/main/res/layout/horizontal_list_item.xml
@@ -11,15 +11,22 @@
         android:layout_weight="0.5"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/gps_signal_strength"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="80dip"
-            android:layout_marginTop="@dimen/view_margin_top"
-            android:background="@color/color_ffff33"
-            android:text=""
-            android:textColor="@color/white" />
-
+            android:layout_gravity="center_horizontal|bottom"
+            android:gravity="center_horizontal|bottom"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/gps_signal_strength"
+                android:layout_width="15dip"
+                android:layout_height="80dip"
+                android:layout_marginTop="@dimen/view_margin_top"
+                android:background="@color/color_ffff33"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center_horizontal"
+                android:textColor="@color/white" />
+        </LinearLayout>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="1dip"
