--- a/app/src/main/res/layout/activity_sdcard_information.xml
+++ b/app/src/main/res/layout/activity_sdcard_information.xml
@@ -37,10 +37,9 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_gravity="center"
-        android:layout_marginTop="@dimen/title_margin_top"
-        android:layout_marginBottom="@dimen/title_margin_top"
+        android:layout_marginTop="@dimen/view_margin_top"
+        android:layout_marginBottom="@dimen/view_margin_top"
         android:background="@drawable/bg_sd_table_all"
-        android:gravity="center"
         android:orientation="vertical">
 
 
@@ -106,7 +105,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dip"
-            android:gravity="center_horizontal"
             android:orientation="horizontal">
 
 
@@ -132,12 +130,6 @@
                     android:textColor="@color/white" />
             </LinearLayout>
 
-<!--            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-            </LinearLayout>-->
         </LinearLayout>
 
 
