--- a/app/src/main/res/layout/activity_system_info_detail.xml
+++ b/app/src/main/res/layout/activity_system_info_detail.xml
@@ -16,6 +16,10 @@
         android:layout_toStartOf="@id/right"
         android:layout_below="@id/title"
         android:paddingStart="5dp"
+        android:scrollbarThumbVertical="@drawable/scroll_menu_main"
+        android:scrollbarTrackVertical="@drawable/bg_scroll_menu_main"
+        android:fadeScrollbars="false"
+        android:scrollbarSize="30dp"
         >
         <LinearLayout
             android:layout_width="match_parent"
