修改dialog内容显示区为滚动状态

--- a/app/src/main/res/layout/dialog_comm.xml
+++ b/app/src/main/res/layout/dialog_comm.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/dialog_sdcard_bg">
 
-    <TextView
+    <com.askey.dvr.cdr7010.setting.widget.MarqueeTextView
         android:id="@+id/content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -13,7 +13,6 @@
         android:marqueeRepeatLimit="marquee_forever"
         android:scrollHorizontally="true"
         android:singleLine="true"
-        android:focusable="true"
         android:focusableInTouchMode="true"
         android:textSize="16sp" />
     <RelativeLayout
