--- a/app/src/main/res/layout/activity_playback_sound_setting.xml
+++ b/app/src/main/res/layout/activity_playback_sound_setting.xml
@@ -5,62 +5,24 @@
     android:layout_height="wrap_content"
     android:background="@drawable/bg_menu_main">
 
-    <ImageView
-        android:id="@+id/iv_playBackSound0"
-        android:layout_width="@dimen/brightness_width"
-        android:layout_height="20dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="@dimen/brightness_margin"
-        android:src="@drawable/unchecked1"
-        android:visibility="invisible" />
+    <include layout="@layout/title_layout" />
 
     <ImageView
-        android:id="@+id/iv_playBackSound1"
-        android:layout_width="@dimen/brightness_width"
-        android:layout_height="40dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="@dimen/brightness_margin"
-        android:src="@drawable/unchecked2"
-        android:visibility="invisible" />
+        android:id="@+id/iv_playback"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
 
-    <ImageView
-        android:id="@+id/iv_playBackSound2"
-        android:layout_width="@dimen/brightness_width"
-        android:layout_height="60dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="@dimen/brightness_margin"
-        android:layout_toRightOf="@id/iv_playBackSound1"
-        android:src="@drawable/unchecked3"
-        android:visibility="invisible" />
+    <include
+        layout="@layout/right_button_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentEnd="true" />
 
-    <ImageView
-        android:id="@+id/iv_playBackSound3"
-        android:layout_width="@dimen/brightness_width"
-        android:layout_height="80dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="@dimen/brightness_margin"
-        android:layout_toRightOf="@id/iv_playBackSound2"
-        android:src="@drawable/unchecked4"
-        android:visibility="invisible" />
-
-    <ImageView
-        android:id="@+id/iv_playBackSound4"
-        android:layout_width="@dimen/brightness_width"
-        android:layout_height="100dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="@dimen/brightness_margin"
-        android:layout_toRightOf="@id/iv_playBackSound3"
-        android:src="@drawable/unchecked5"
-        android:visibility="invisible" />
-
-    <ImageView
-        android:id="@+id/iv_playBackSound5"
-        android:layout_width="@dimen/brightness_width"
-        android:layout_height="120dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="@dimen/brightness_margin"
-        android:layout_toRightOf="@id/iv_playBackSound4"
-        android:src="@drawable/unchecked6"
-        android:visibility="invisible" />
+    <include
+        layout="@layout/bottom_button_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true" />
 
 </RelativeLayout>
