--- a/app/src/main/res/layout/activity_system_info_detail.xml
+++ b/app/src/main/res/layout/activity_system_info_detail.xml
@@ -24,37 +24,44 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:orientation="vertical"
             android:padding="5dp"
             >
-            <LinearLayout
+            <RelativeLayout
                 android:id="@+id/system_version"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:visibility="gone"
+                android:orientation="horizontal"
+                android:visibility="visible"
                 >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@android:color/background_light"
-                    android:text="@string/system_version"
-                    />
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:textColor="@android:color/background_light"-->
+                    <!--android:text="@string/system_version"-->
+                    <!--/>-->
                 <TextView
                     android:id="@+id/version"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:gravity="center_vertical"
+                    android:textSize="22sp"
                     android:textColor="@android:color/background_light"
                     android:paddingStart="10dp"
+                    android:drawableStart="@drawable/img_system_version"
+                    android:drawablePadding="10dp"
+                    android:singleLine="true"
                     />
 
-            </LinearLayout>
+            </RelativeLayout>
             <LinearLayout
                 android:id="@+id/sim"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:visibility="visible"
+                android:visibility="gone"
                 >
                 <TextView
                     android:layout_width="wrap_content"
