--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,10 @@
         <item name="android:windowAnimationStyle">@style/NoAnimation</item>
         <item name="android:windowFullscreen">true</item>
     </style>
+    
+    <style name="SettingActivityTheme" parent="AppThemeNoAnimation">
+        <item name="android:windowIsTranslucent">true</item>
+    </style>
 
     <style name="NoAnimation">
         <item name="android:activityOpenEnterAnimation">@null</item>
