--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -12,32 +12,45 @@
         android:src="@drawable/title_menu_main" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/title"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_toLeftOf="@id/right"
+        >
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="6"
+            android:layout_height="175dp">
+            <ListView
+                android:id="@+id/list_view"
+                android:layout_width="175dp"
+                android:layout_height="wrap_content" />
 
-        <ListView
-            android:id="@+id/list_view"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content" />
-
-        <com.askey.dvr.cdr7010.setting.widget.VerticalProgressBar
-            android:id="@+id/vp_progress"
-            android:layout_width="6dp"
-            android:layout_height="175dp"
-            android:layout_marginLeft="10dp"
-            android:layout_gravity="center_vertical" />
-
-        <ImageView
-            android:id="@+id/iv_icon"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_gravity="center_vertical"
-            android:src="@drawable/ic_launcher_background" />
+            <com.askey.dvr.cdr7010.setting.widget.VerticalProgressBar
+                android:id="@+id/vp_progress"
+                android:layout_width="6dp"
+                android:layout_height="175dp"
+                android:layout_marginLeft="10dp"
+                android:layout_gravity="center_vertical" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="3"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            >
+            <ImageView
+                android:id="@+id/iv_icon"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_launcher_background" />
+        </LinearLayout>
     </LinearLayout>
 
     <include
+        android:id="@+id/right"
         layout="@layout/right_button_layout"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
