--- a/app/src/main/res/layout/bottom_button_layout.xml
+++ b/app/src/main/res/layout/bottom_button_layout.xml
@@ -10,7 +10,7 @@
         android:id="@+id/back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="20dp"
+        android:layout_marginEnd="38dp"
         android:button="@null"
         android:focusable="false"
         android:textColor="@color/white"
