--- a/app/src/main/res/layout/right_button_layout.xml
+++ b/app/src/main/res/layout/right_button_layout.xml
@@ -10,6 +10,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:orientation="vertical">
 
         <RadioButton
@@ -27,6 +28,7 @@
             android:id="@+id/center_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:button="@null"
             android:focusable="false"
             android:textColor="@color/white"
@@ -38,6 +40,7 @@
             android:id="@+id/bottom_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:button="@null"
             android:focusable="false"
             android:textColor="@color/white"
