--- a/app/src/main/res/layout/second_menu_layout.xml
+++ b/app/src/main/res/layout/second_menu_layout.xml
@@ -7,7 +7,7 @@
     <include layout="@layout/title_layout" />
 
     <LinearLayout
-        android:layout_width="256dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
@@ -19,7 +19,9 @@
         <com.askey.dvr.cdr7010.setting.widget.VerticalProgressBar
             android:id="@+id/vp_progress"
             android:layout_width="6dp"
-            android:layout_height="175dp" />
+            android:layout_height="175dp"
+            android:layout_marginStart="20dp"
+            />
     </LinearLayout>
 
 </LinearLayout>
