--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -20,30 +20,30 @@
         >
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_weight="6"
+            android:layout_weight="7"
             android:layout_height="180dp">
             <ListView
                 android:id="@+id/list_view"
-                android:layout_width="180dp"
+                android:layout_width="170dp"
                 android:layout_height="wrap_content" />
 
             <com.askey.dvr.cdr7010.setting.widget.VerticalProgressBar
                 android:id="@+id/vp_progress"
-                android:layout_width="6dp"
+                android:layout_width="5dp"
                 android:layout_height="175dp"
                 android:layout_marginLeft="10dp"
                 android:layout_gravity="center_vertical" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_weight="3"
+            android:layout_weight="4"
             android:layout_height="match_parent"
             android:gravity="center"
             >
             <ImageView
                 android:id="@+id/iv_icon"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:src="@drawable/ic_launcher_background" />
         </LinearLayout>
