revert to 7be6a0b - 修改弹出框按钮选择规则
because uncommpleted working

revert commits:
* a8a8b9c - 将耗时操作放置在线程中执行
* 4049301 - 删除升级广播所带参数
* d05e786 - 修改部分UI
* cd62e08 - 修改build toos版

This reverts commit cd62e084484bb12ccde003db09658c9397f6086e.

--- a/app/src/main/res/values-en/arrays.xml
+++ b/app/src/main/res/values-en/arrays.xml
@@ -33,9 +33,14 @@
         <item>Sdcard Initialization</item>
     </string-array>
 
-    <string-array name="Emergency_call_setting">
-        <item>Display Emergency Contacts</item>
-        <item>Emergency Automatic Report Setting</item>
+    <string-array name="vehicle_type">
+        <item>Mini sedan</item>
+        <item>Minivan</item>
+        <item>Medium sedan</item>
+        <item>RV</item>
+        <item>Large sedan</item>
+        <item>SUV</item>
+        <item>Others</item>
     </string-array>
 
     <string-array name="secend_camera_array">
