--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -59,9 +59,25 @@
         <item>前方衝突警告</item>
         <item>車線逸脱警告</item>
         <item>歩行者衝突警告</item>
-        <item>取付位置</item>
-        <item>発進遅れ警告</item>
-        <item>検出範囲 </item>
+        <!--<item>取付位置</item>-->
+        <!--<item>発進遅れ警告</item>-->
+        <!--<item>検出範囲 </item>-->
+
+        <item>高速道路逆走注意アラート</item>
+        <item>指定区域外走行検知時</item>
+        <item>運転前アドバイス</item>
+        <item>運転レポートの通知</item>
+        <item>急加速,急減速時</item>
+        <item>ハンドリング</item>
+        <item>ふらつき</item>
+        <item>一時停止</item>
+        <item>事故多発地域接近</item>
+        <item>時速30㎞規制区域</item>
+        <item>走行時間</item>
+        <item>動物注意</item>
+        <item>気象情報</item>
+        <item>お知らせ</item>
+        <item>GPS（位置情報）に関する通知</item>
     </string-array>
 
     <string-array name="movie_record">
