--- a/app/src/main/res/values-ja-rJP/arrays.xml
+++ b/app/src/main/res/values-ja-rJP/arrays.xml
@@ -71,10 +71,15 @@
         <item>映像確認</item>
         <item>モニター明るさ</item>
         <item>モニター画面節電設定</item>
+        <item>セットアップ</item>
+        <item>車両タイプ</item>
+        <item>検出範囲</item>
+        <item>取付位置</item>
         <item>設置ツール</item>
         <item>設定初期化</item>
-        <item>セットアップ</item>
-        <item>2ndカメラ設定</item>
+        <!--<item>2ndカメラ設定</item>-->
+        <item>SDカード情報</item>
+        <item>SDカード初期化</item>
         <item>システム更新</item>
         <item>システム情報</item>
     </string-array>
