--- a/app/src/main/res/layout/activity_drving_setting.xml
+++ b/app/src/main/res/layout/activity_drving_setting.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    tools:context="com.askey.dvr.cdr7010.setting.module.dirving.ui.DrivingSetting">
+    tools:context="com.askey.dvr.cdr7010.setting.module.driving.ui.DrivingSetting">
 
     <LinearLayout
         android:layout_width="250dp"
