补充缺失的string

--- a/app/src/main/res/values-en/arrays.xml
+++ b/app/src/main/res/values-en/arrays.xml
@@ -48,6 +48,16 @@
         <item>Sdcard Initialization</item>
     </string-array>
 
+    <string-array name="vehicle_type">
+        <item>Mini sedan</item>
+        <item>Minivan</item>
+        <item>Medium sedan</item>
+        <item>RV</item>
+        <item>Large sedan</item>
+        <item>SUV</item>
+        <item>Others</item>
+    </string-array>
+
     <string-array name="Emergency_call_setting">
         <item>Display Emergency Contacts</item>
         <item>Emergency Automatic Report Setting</item>
