--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -47,6 +47,16 @@
         <item>OFF</item>
     </string-array>
 
+    <string-array name="vehicle_type">
+        <item>軽自動車セダン</item>
+        <item>軽自動車ワンボックス</item>
+        <item>5、7ナンバーセダン</item>
+        <item>5、7ナンバーワゴン/RV/ワンボックス</item>
+        <item>3ナンバーセダン</item>
+        <item>3ナンバーワゴン/RV/ワンボックス</item>
+        <item>その他</item>
+    </string-array>
+
     <string-array name="impact_setting">
         <item>1</item>
         <item>2</item>
