--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="color_66cc66">#3366cc66</color>
     <color name="color_00ffffff">#00ffffff</color>
     <color name="color_ffff33">#ffff33</color>
+    <color name="text_color_black">#000000</color>
 </resources>
