--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -15,6 +15,8 @@
     <dimen name="gps_status_padding_top">10dp</dimen>
     <dimen name="gps_status_padding_left">3dp</dimen>
 
+    <dimen name="dialog_inquiries">70dp</dimen>
+
     <dimen name="title_size">24sp</dimen>
     <dimen name="content_size">16sp</dimen>
     <dimen name="time_size">30sp</dimen>
